--- a/odoo-17.0/addons/gamification/i18n/th.po
+++ b/odoo-17.0/addons/gamification/i18n/th.po
@@ -2544,7 +2544,7 @@ msgstr "เริ่มต้นเป้าหมาย"
 #: model_terms:ir.ui.view,arch_db:gamification.challenge_search_view
 #: model_terms:ir.ui.view,arch_db:gamification.goal_search_view
 msgid "State"
-msgstr "รัฐ"
+msgstr "สถานะ"
 
 #. module: gamification
 #: model_terms:ir.ui.view,arch_db:gamification.badge_form_view
