--- a/custom/dev/hr_insurance/i18n/th.po
+++ b/custom/dev/hr_insurance/i18n/th.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 17.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-11-10 05:23+0000\n"
-"PO-Revision-Date: 2025-11-10 05:23+0000\n"
+"POT-Creation-Date: 2025-11-10 23:11+0000\n"
+"PO-Revision-Date: 2025-11-10 23:11+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -46,7 +46,12 @@ msgid ""
 msgstr ""
 "ไม่สามารถผ่านช่วงทดลองงานได้\n"
 "\n"
-"โปรดเพิ่มรายการประกันทงาน ที่ระบุยอดเก็บประกัน อย่างน้อยหนึ่งรายการก่อนดำเนินการต่อ"
+"โปรดเพิ่มรายการประกันงาน ที่ ติ๊ก จำนวนเบี้ยประกันคงที่ อย่างน้อยหนึ่งรายการก่อนดำเนินการต่อ"
+
+#. module: hr_insurance
+#: model:ir.model.fields,help:hr_insurance.field_hr_insurance__policy_fix_amount
+msgid "Check for fixed premium amount"
+msgstr "เลือกเพื่อตั้งเบี้ยประกันให้เป็นจำนวนคงที่"
 
 #. module: hr_insurance
 #: model:ir.model.fields,field_description:hr_insurance.field_insurance_policy__note_field
@@ -257,7 +262,14 @@ msgstr "กำลังทดลองงาน"
 #. module: hr_insurance
 #: model:ir.model.fields,field_description:hr_insurance.field_hr_probation_wizard__probation_paid_insurance
 msgid "Paid Amount"
-msgstr ""
+msgstr "จ่ายเบี้ยประกันงาน ไปแล้ว"
+
+#. module: hr_insurance
+#. odoo-python
+#: code:addons/hr_insurance/models/hr_employee.py:0
+#, python-format
+msgid "Paid insurance in Probation state for %s"
+msgstr "จ่ายประกันในช่วงทดลองงาน สำหรับ %s"
 
 #. module: hr_insurance
 #: model:ir.model.fields.selection,name:hr_insurance.selection__hr_employee__probation_status__pass_probation
@@ -412,11 +424,6 @@ msgstr ""
 #: model:ir.model,name:hr_insurance.model_hr_probation_wizard
 msgid "add extra value for insurance accout after pass probation"
 msgstr ""
-
-#. module: hr_insurance
-#: model:ir.model.fields,help:hr_insurance.field_hr_insurance__policy_fix_amount
-msgid "check for fix premium amount"
-msgstr "เลือกเพื่อตั้งเบี้ยประกันให้เป็นจำนวนคงที่"
 
 #. module: hr_insurance
 #: model:ir.model.fields,field_description:hr_insurance.field_insurance_policy__code
